# DSA-Project

./: .gitignore  README.md  calendar.cpp  calendar.h  calendar_data.txt  calendar_export.txt  ds_lib.h  event.cpp  event.h  file_manager.cpp  file_manager.h  main.cpp  start.bat
backend/: CMakeLists.txt  build.bat
backend/include/: bst.h  calendar.h  ds_lib.h  ds_utility.h  event.h  file_manager.h  hash_table.h  linked_list.h  min_heap.h
backend/src/: bst.cpp  calendar.cpp  ds_utility.cpp  file_manager.cpp  hash_table.cpp  linked_list.cpp  main.cpp  min_heap.cpp  server.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: EventCard.jsx  Navbar.jsx
frontend/src/pages/: AddEvent.jsx  CheckConflicts.jsx  Dashboard.jsx  SearchEvents.jsx  Structures.jsx  ViewEvents.jsx
